--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'serif', sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
 }
 
 body {
