--- a/css/style.css
+++ b/css/style.css
@@ -12,31 +12,40 @@ body {
     align-items: center;
 }
 
+
 /* common styles */
 .title{
     font-size: 30px;
     color: black;
+    padding-top: 35px;
 }
 
 .sub_title{
     font-size: 25px;
-    color: darkslategrey;
+    color: black;
+    margin-top: 15px;
 }
 
 .description {
     font-size: 19px;
-    color: gray;
+    color: black;
+    margin-top: 5px;
+    padding-bottom: 20px;
 }
 
 .menu {
     font-size: 25px;
     color: black;
+    padding-top: 35px;
 }
 
 .menu_description {
     font-size: 19px;
     color: black;
+    margin-top: 5px;
+    padding-bottom: 20px;
 }
+
 
 /*header*/
 .container {
@@ -64,6 +73,7 @@ body {
     position: relative;
     width: 200px;
     border-radius: 50%;
+    margin: 5px;
     padding: 20px;
 }
 
@@ -80,12 +90,13 @@ body {
     font-size: 31px;
 }
 
+
 /* main */
 .content_container {
     position: relative;
     width: 100%;
     max-width: 1000px;
-    background: white;
+    background: whitesmoke;
 }
 
 .content_top {
@@ -93,14 +104,22 @@ body {
     margin-right: 30px;
     align-items: center;
     align-content: center;
+    border-bottom: solid;
 }
 
+
+/* footer */
 .contact_container {
     position: relative;
     width: 100%;
     max-width: 1000px;
-    align-items: center;
-    align-content: center;
+    background: whitesmoke;
+    padding-bottom: 50px;
+}
+
+.contact_box {
     margin-left: 30px;
     margin-right: 30px;
+    align-items: center;
+    align-content: center;
 }
