--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 /* navigation bar */
 .menu {
-    background-color: black;
+    background-color: rgb(5, 5, 5);
     margin: 0px;
     position: sticky;
     top: 0;
@@ -20,7 +20,7 @@ body {
 
 .menu a {
     font-size: 20px;
-    color: white;
+    color: rgb(230, 230, 230);
     box-sizing: border-box;
     display: inline-flex;
     padding: 16px 24px; 
@@ -28,7 +28,7 @@ body {
 
 .menu a:hover {
     background: rgb(0, 259, 179);
-    color: black;
+    color: rgb(5, 5, 5);
 }
 
 
@@ -36,14 +36,14 @@ body {
 .title{
     font-size: 30px;
     margin-left: 40px;
-    color: white;
+    color: rgb(230, 230, 230);
     padding-top: 35px;
     grid-column: 1;
 }
 .sub_title{
     font-size: 25px;
     margin-left: 5px;
-    color: white;
+    color: rgb(230, 230, 230);
     margin-top: 15px;
     grid-column: 2;
 }
@@ -51,11 +51,20 @@ body {
     font-size: 19px;
     margin-left: 5px;
     margin-right: 40px;
-    color: white;
+    color: rgb(230, 230, 230);
     margin-top: 5px;
     padding-bottom: 20px;
     grid-column: 2;
 }
+
+.cs_link {
+    color: rgb(230, 230, 230);
+}
+
+.cs_link:hover {
+    color: rgb(230, 230, 230);
+}
+
 .date {
     font-size: 15px;
     color: rgb(0, 259, 179);
@@ -69,7 +78,7 @@ body {
     width: 100%;
     max-width: 1000px;
     height: 225px;
-    background: rgb(0, 0, 0);
+    background: rgb(5, 5, 5);
 }
 .top {
     padding: 20px;
@@ -77,19 +86,22 @@ body {
 .box {
     width: 100%;
     display: flex;
-    grid-template-columns: 1 / -1;
 }
+
 .profileImage {
     width: 200px;
     border-radius: 50%;
-    margin: 5px;
-    padding: 20px;
+    border: 5px solid rgb(230, 230, 230);
+    margin-top: 5px;
+    margin-left: 35px;
 }
+
 .profileTitle {
-    display: grid;
+    margin-top: 50px;
     align-items: center;
     align-content: center;
 }
+
 .profileJob {
     color: rgb(0, 259, 179);
     font-size: 31px;
@@ -97,7 +109,7 @@ body {
 
 .profileName {
     font-size: 60px;
-    color: white;
+    color: rgb(230, 230, 230);
 }
 
 
@@ -105,27 +117,32 @@ body {
 .content_container {
     width: 100%;
     max-width: 1000px;
-    background: rgb(9, 9, 9);
+    background: rgb(15, 15, 15);
 }
 .content_box {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
+
 .skill_list {
     font-size: 19px;
-    color: white;
-    margin-left: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 40px;
+    color: rgb(230, 230, 230);
+    margin-top: 75px;
+    padding-bottom: 20px;
     list-style: none;
+    grid-column: 2;
 }
+
 .hobby_list {
-    font-size: 20px;
-    color: white;
-    margin-left: 40px;
+    font-size: 19px;
+    color: rgb(230, 230, 230);
+    margin-top: 75px;
+    margin-left: 5px;
     padding-bottom: 40px;
-    padding-top: 10px;
     list-style: none;
+    grid-column: 2;
 }
 
 .hobby_list li {
@@ -137,7 +154,7 @@ body {
 .contact_container {
     width: 100%;
     max-width: 1000px;
-    background: rgb(13, 13, 13);
+    background: rgb(25, 25, 25);
     padding-bottom: 50px;
 }
 .contact_box {
@@ -149,12 +166,12 @@ body {
 .contact_title {
     font-size: 30px;
     margin-left: 12px;
-    color: white;
+    color: rgb(230, 230, 230);
     padding-top: 35px;
 }
 .contact_list {
     font-size: 19px;
-    color: white;
+    color: rgb(230, 230, 230);
     padding-top: 20px;
     padding-bottom: 10px;
     list-style: none;
@@ -182,9 +199,9 @@ body {
 }
 
 .contact_list a {
-    color: white;
+    color: rgb(230, 230, 230);
 }
 
 .contact_list a:hover {
-    color: white;
+    color: rgb(230, 230, 230);
 }
