--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body {
     height: 225px;
     background: rgb(5, 5, 5);
 }
+
 .top {
     padding: 20px;
 }
@@ -90,6 +91,7 @@ body {
 
 .profileImage {
     width: 200px;
+    height: 200px;
     border-radius: 50%;
     border: 5px solid rgb(230, 230, 230);
     margin-top: 5px;
