--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,20 @@ body {
 
 
 /*header*/
+.hero {
+    width: 100%;
+    max-width: 1000px;
+    height: 225px;
+    background: url("../Images/hero-image.jpg") rgb(5, 5, 5);
+    background-position-y: -80px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .container {
     width: 100%;
     max-width: 1000px;
     height: 225px;
-    background: rgb(5, 5, 5);
 }
 
 .top {
@@ -105,7 +114,7 @@ body {
 }
 
 .profileJob {
-    color: rgb(0, 259, 179);
+    color: rgb(230, 230, 230);
     font-size: 31px;
 }
 
